# advent-of-code-2023

./: CMakeLists.txt  README.md  conanfile.txt
solutions/: README.md
solutions/01_1/: main.cpp
solutions/01_2/: CMakeLists.txt  main.cpp
solutions/02_1/: main.cpp
solutions/02_2/: main.cpp
solutions/03_1/: main.cpp
solutions/03_2/: main.cpp
solutions/04_1/: main.cpp
solutions/04_2/: main.cpp
solutions/05_1/: main.cpp
solutions/05_2/: main.cpp
solutions/06_1/: main.cpp
solutions/06_2/: input_final.txt
solutions/07_1/: main.cpp
solutions/07_2/: main.cpp
solutions/08_1/: input_final.txt  main.cpp
solutions/08_2/: main.cpp
solutions/09_1/: main.cpp
solutions/09_2/: main.cpp
solutions/10_1/: input_example.txt  main.cpp
solutions/10_2/: main.cpp
solutions/11_1/: main.cpp
solutions/11_2/: main.cpp
solutions/12_1/: main.cpp
solutions/12_2/: input_final_flipped.txt  main.cpp
solutions/13_1/: CMakeLists.txt  main.cpp
solutions/13_2/: main.cpp
solutions/14_1/: main.cpp
solutions/14_2/: main.cpp
solutions/15_1/: main.cpp
solutions/15_2/: main.cpp
solutions/16_1/: main.cpp
solutions/16_2/: main.cpp
solutions/17_1/: main.cpp
solutions/17_2/: main.cpp
solutions/18_1/: main.cpp
solutions/18_2/: main.cpp
solutions/19_1/: main.cpp
solutions/19_2/: input_example_2.txt  main.cpp
solutions/20_1/: main.cpp
solutions/21_1/: main.cpp
solutions/22_1/: input_example_2.txt  main.cpp
solutions/22_2/: main.cpp
solutions/23_1/: main.cpp
solutions/23_2/: main.cpp
utils/: CMakeLists.txt  application.cpp  application.hpp  application_test.cpp  grid.cpp  grid.hpp  hash_utils.hpp  math_utils.cpp  math_utils.hpp  stream_utils.cpp  stream_utils.hpp  string_utils.cpp  string_utils.hpp  utils.hpp
